需求[#21647]: SR-20200914-01-10 视频B接口开发-视频回放增加flv播放流
    [修改内容]: SR-20200914-01-10 视频B接口开发-视频回放增加flv播放流
    [描述说明]:
    [问题原因]:
    [解决方法]:
    [测试建议]:

Change-Id: Ia147945575421922a5e400a5b4d6203cba3a58a8
Signed-off-by: taotao <taotao@yijiahe.com>